# nz-campsites-explorer

./: .gitignore  README.md  app.py  pyproject.toml
data/: campsites.csv
src/: data_loader.py  insights.py
tests/: test_data_loader.py  test_insights.py
